# hyprpods

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/BluezClient/: BluezClient.cpp  BluezClient.h
src/Config/: Config.h
src/Decoder/: Decoder.cpp  Decoder.h
src/State/: DeviceState.cpp  DeviceState.h
src/Utils/: Utils.h  json.hpp
